# pa-leadership-survey

./: .gitignore  Pipfile  README.md  db.sqlite3  settings.py
analysis/: pyproject.toml
analysis/data/nochmal neu Deutsch/: PageTimes-2023-11-14.csv  all_apps_wide_2023-11-14 (1).csv
analysis/data/raw/deutsch/: prolific_export_65533ef229ba9a12a2367443_DEU.csv
analysis/data/raw/deutsch runde 2/: PageTimes-2023-11-15_DEU.csv  PageTimes-2023-11-16_DEU.csv  PageTimes-2023-11-16_additional_data_DEU.csv  PageTimes-2023-11-20.csv  all_apps_wide_2023-11-16_DEU.csv  all_apps_wide_2023-11-16_additional_data_DEU.csv  all_apps_wide_2023-11-20.csv  prolific_demographics.csv  prolific_demographics_additional_data.csv
analysis/data/raw/deutsch runde 2/incomplete/: all_apps_wide_2023-11-15_DEU.csv
analysis/data/raw/usa/: PageTimes-2023-11-14_USA.csv  all_apps_wide_2023-11-14_US.csv  all_apps_wide_2023-11-14_USA.csv  prolific_demographics.csv
analysis/data/usa/: PageTimes-2023-11-14_US.csv  prolific_export_6553945d3196e0e3b7d7d690.csv
analysis/notebooks/: analysis.ipynb  reg_tables.html  reg_tables_new.html  regression_df_act_responsible.csv  regression_df_all_dependent_variables.csv  regression_df_perceived_risk.csv  regressions_df_feel_responsible.csv  scenarios_all.html  scenarios_deu.html  scenarios_usa.html
manuscript/: Leadership ECIS24 V11 MKL.docx  Leadership ECIS24 V14_david.docx
references/: Introduction.docx  Vignetten.docx  questionnaire.xlsx
resources/: Vignetten.docx  introduction.docx  questionnaire.xlsx  stimulus.sketch  study_design.pptx
(+30 files in other folders)
